--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,5 @@ deps       =
     pip19: pip >= 19.0.1
 commands   =
     pytest -s {toxinidir}/tests \
-        --cov {envsitepackagesdir}/pipupgrade
+        --cov {envsitepackagesdir}/shank
         ; --cov-fail-under 90
